--- a/generic_algorithm/泛型算法.md
+++ b/generic_algorithm/泛型算法.md
@@ -7,9 +7,21 @@
 
 泛型算法本身不会执行容器的操作,它们只会运行于迭代器之上,执行迭代器的操作.
 
-泛型算法总是使用两个参数来表示范围,两个参数分别是指向要处理的第一个元素和尾元素之后位置的迭代器
+泛型算法总是使用两个参数来表示范围,两个参数分别是指向要处理的第一个元素和尾元素之后位置的迭代器<br/>
+用一个单一迭代器表示第二个序列的算法都假定第二个序列至少与第一个一样长.确保算法不会施工图访问第二个序列中不存在的元素是程序员的责任
 ## 只读算法
 
-一些算法只会读取其输入范围内的元素,而不改变元素.find就是这样一种算法
-accumulate同样也是 accumulate(vec.cbegin(),vec.cend(),0) 计算 vec 中所有元素的和
-accumulate的第三个参数 的类型决定了函数中使用哪个加法运算符以及返回值的类型
+一些算法只会读取其输入范围内的元素,而不改变元素.
+- find 就是这样一种算法
+- accumulate 同样也是 accumulate(vec.cbegin(),vec.cend(),0) 计算 vec 中所有元素的和  accumulate的第三个参数 的类型决定了函数中使用哪个加法运算符以及返回值的类型
+- equal 用于确定两个序列是否保存相同的值. 它将第一个序列中的每个元素与第二个序列中的对应元素进行比较
+
+## 写容器元素的算法
+
+一些算法会自己向输入范围写入元素
+- fill(vec.begin(),vec.end(), 0) 接受一对迭代器表示一个范围,fill 将给定的这个值赋予输入序列中的每个元素
+- fill_n
+- back_inserter 保证算法有足够元素空间来容纳输出数据的方式是使用插入迭代器.
+
+
+一些算法接受一个迭代器来指出一个单独的目的位置.这些算法将新值赋予一个序列中的元素,该序列从目的位置
