feat:  泛型算法-拷贝算法

--- a/generic_algorithm/泛型算法.md
+++ b/generic_algorithm/泛型算法.md
@@ -25,3 +25,7 @@
 
 
 一些算法接受一个迭代器来指出一个单独的目的位置.这些算法将新值赋予一个序列中的元素,该序列从目的位置
+
+### 拷贝算法
+
+拷贝算法是另一个向目的位置迭代器指向的输出序列中的元素写入数据的算法.此算法接受三个迭代器,前两个表示一个输入范围,第三个表示目的序列的起始位置,传递给copy的目的序列至少要包含与输入序列一样的多的元素
